Starting with mobile first approach
adding media queries in style sheets

--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
 </head>
 
 <body>
+    <header class="main-header">
+        <h1>Johan Lourens</h1>
+        <ul class="main-nav">
+            <li>HOME</li>
+            <li>PORTFOLIO</li>
+            <li>CONTACT</li>
+        </ul>
+    </header>
+
+    <div class="banner">
+        <img src="/images/responsive-layout-profile.png" alt="Avatar">
+        Avatar
+        <p>Hi! I'm a front-end developer who loves responsive design and css.</p>
+    </div>
+
+    <footer>
+
+    </footer>
 
 </body>
 
