--- a/index.html
+++ b/index.html
@@ -10,20 +10,53 @@
 </head>
 
 <body>
-    <header class="main-header">
-        <h1>Johan Lourens</h1>
-        <ul class="main-nav">
+    <header class="main-header container">
+        <h1 class="main-name items">Johan Lourens</h1>
+        <ul class="main-nav items">
             <li>HOME</li>
             <li>PORTFOLIO</li>
             <li>CONTACT</li>
         </ul>
     </header>
-
-    <div class="banner">
-        <img src="/images/responsive-layout-profile.png" alt="Avatar">
-        Avatar
-        <p>Hi! I'm a front-end developer who loves responsive design and css.</p>
+    <div class="main-banner container">
+        <img class="items" src="/images/responsive-layout-profile.png" alt="Avatar">
+        <p class="items">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a
+            degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
     </div>
+
+    <main class="main-portfolio">
+
+        <div class="items">
+            <img src="/images/portfolio-1.png" alt="Marketing Page">
+            <h3>Marketing Page</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="items">
+            <img src="/images/portfolio-2.png" alt="Search Page">
+            <h3>Search Page</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="items">
+            <img src="/images/portfolio-3.png" alt="Travel App">
+            <h3>Travel 🛫 </h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="items">
+            <img src="/images/portfolio-4.png" alt="Map of Favorite Sports">
+            <h3>Map of Favorite Spots</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="items">
+            <img src="/images/portfolio-5.png" alt="Photo Gallery">
+            <h3>Photo Gallery</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="items">
+            <img src="/images/portfolio-6.png" alt="Calculator">
+            <h3>Calculator</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+    </main>
 
     <footer>
 
