almost done with footer

--- a/index.html
+++ b/index.html
@@ -6,60 +6,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <header class="main-header container">
-        <h1 class="main-name items">Johan Lourens</h1>
-        <ul class="main-nav items">
+    <header class="header">
+        <h1 class="name">Johan Lourens</h1>
+        <ul class="nav">
             <li>HOME</li>
             <li>PORTFOLIO</li>
             <li>CONTACT</li>
         </ul>
+        <div class="banner">
+            <img class="profile-picture" src="/images/responsive-layout-profile.png" alt="Avatar">
+            <p class="banner-text items">Hi! I'm a front-end developer who loves responsive design and css. I recently
+                finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!
+            </p>
+        </div>
     </header>
-    <div class="main-banner container">
-        <img class="items" src="/images/responsive-layout-profile.png" alt="Avatar">
-        <p class="items">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a
-            degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
-    </div>
 
-    <main class="main-portfolio">
-
-        <div class="items">
+    <main class="portfolio">
+        <h2>PORTFOLIO</h2>
+        <div class="box">
             <img src="/images/portfolio-1.png" alt="Marketing Page">
             <h3>Marketing Page</h3>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="items">
+        <div class="box">
             <img src="/images/portfolio-2.png" alt="Search Page">
             <h3>Search Page</h3>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="items">
+        <div class="box">
             <img src="/images/portfolio-3.png" alt="Travel App">
             <h3>Travel 🛫 </h3>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="items">
+        <div class="box">
             <img src="/images/portfolio-4.png" alt="Map of Favorite Sports">
             <h3>Map of Favorite Spots</h3>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="items">
+        <div class="box">
             <img src="/images/portfolio-5.png" alt="Photo Gallery">
             <h3>Photo Gallery</h3>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="items">
+        <div class="box">
             <img src="/images/portfolio-6.png" alt="Calculator">
             <h3>Calculator</h3>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
     </main>
 
-    <footer>
-
+    <footer class="footer">
+        <h2>CONTACT</h2>
+        <p>If you're interested in chatting or want mroe information about what ive been workingon id love to hear from
+            you!</p>
+        <span>Phone&nbsp;&nbsp;&nbsp;&nbsp;<strong>+1(111)555-1234</strong></span> <br>
+        <span>Email &nbsp;&nbsp;&nbsp;<strong>jdl.lourens@gmail.com</strong></span>
+        <div class="links">
+            <a class="one" href="">Johan Lourens</a>
+            <a class="two" href="">BACK TO TOP</a>
+        </div>
     </footer>
 
 </body>
