--- a/index.html
+++ b/index.html
@@ -20,48 +20,49 @@
             <li>PORTFOLIO</li>
             <li>CONTACT</li>
         </ul>
-        <div class="banner">
-            <img class="profile-picture" src="/images/responsive-layout-profile.png" alt="Avatar">
-            <p class="banner-text items">Hi! I'm a front-end developer who loves responsive design and css. I recently
-                finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!
-            </p>
-        </div>
     </header>
+    <div class="banner">
+        <img class="profile-picture" src="/images/responsive-layout-profile.png" alt="Avatar">
+        <p class="banner-text">Hi! I'm a front-end developer who loves responsive design and css. I recently
+            finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!
+        </p>
+    </div>
 
-    <main class="portfolio">
+    <main>
         <h2>PORTFOLIO</h2>
-        <div class="box">
-            <img src="/images/portfolio-1.png" alt="Marketing Page">
-            <h3>Marketing Page</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="box">
-            <img src="/images/portfolio-2.png" alt="Search Page">
-            <h3>Search Page</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="box">
-            <img src="/images/portfolio-3.png" alt="Travel App">
-            <h3>Travel 🛫 </h3>
-            <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="box">
-            <img src="/images/portfolio-4.png" alt="Map of Favorite Sports">
-            <h3>Map of Favorite Spots</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="box">
-            <img src="/images/portfolio-5.png" alt="Photo Gallery">
-            <h3>Photo Gallery</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="box">
-            <img src="/images/portfolio-6.png" alt="Calculator">
-            <h3>Calculator</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
+        <div class="portfolio">
+            <div class="box">
+                <img src="/images/portfolio-1.png" alt="Marketing Page">
+                <h3>Marketing Page</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="box">
+                <img src="/images/portfolio-2.png" alt="Search Page">
+                <h3>Search Page</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="box">
+                <img src="/images/portfolio-3.png" alt="Travel App">
+                <h3>Travel 🛫 </h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="box">
+                <img src="/images/portfolio-4.png" alt="Map of Favorite Sports">
+                <h3>Map of Favorite Spots</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="box">
+                <img src="/images/portfolio-5.png" alt="Photo Gallery">
+                <h3>Photo Gallery</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="box">
+                <img src="/images/portfolio-6.png" alt="Calculator">
+                <h3>Calculator</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
         </div>
     </main>
-
     <footer class="footer">
         <h2>CONTACT</h2>
         <p>If you're interested in chatting or want mroe information about what ive been workingon id love to hear from
