fixed some flexbox css properties

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 <body>
     <header class="header">
         <h1 class="name">Johan Lourens</h1>
-        <ul class="nav">
-            <li>HOME</li>
-            <li>PORTFOLIO</li>
-            <li>CONTACT</li>
-        </ul>
+        <nav>
+            <ul class="nav">
+                <li>HOME</li>
+                <li>PORTFOLIO</li>
+                <li>CONTACT</li>
+            </ul>
+        </nav>
     </header>
     <div class="banner">
         <img class="profile-picture" src="/images/responsive-layout-profile.png" alt="Avatar">
