added footer nav

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </ul>
         </nav>
     </header>
+
     <div class="banner">
         <img class="profile-picture" src="/images/responsive-layout-profile.png" alt="Avatar">
         <p class="banner-text">Hi! I'm a front-end developer who loves responsive design and css. I recently
@@ -36,32 +37,37 @@
             <div class="box">
                 <img src="/images/portfolio-1.png" alt="Marketing Page">
                 <h3>Marketing Page</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>This project shows the font page of a marketing website meant for a specific business I'm interested
+                    in.</p>
             </div>
             <div class="box">
                 <img src="/images/portfolio-2.png" alt="Search Page">
                 <h3>Search Page</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>This project searches through a specific database to find information that the user is trying to look
+                    up.</p>
             </div>
             <div class="box">
                 <img src="/images/portfolio-3.png" alt="Travel App">
-                <h3>Travel 🛫 </h3>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h3>Travel App </h3>
+                <p>This project compares travel times based on different transportation methods and tells you the best
+                    one.</p>
             </div>
             <div class="box">
                 <img src="/images/portfolio-4.png" alt="Map of Favorite Sports">
                 <h3>Map of Favorite Spots</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself
+                    walking tour.</p>
             </div>
             <div class="box">
                 <img src="/images/portfolio-5.png" alt="Photo Gallery">
                 <h3>Photo Gallery</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate
+                    through photos.</p>
             </div>
             <div class="box">
                 <img src="/images/portfolio-6.png" alt="Calculator">
                 <h3>Calculator</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Someone can enter in the numbers they want and press the big blue button and get the result.</p>
             </div>
         </div>
     </main>
@@ -70,10 +76,13 @@
         <p>If you're interested in chatting or want mroe information about what ive been workingon id love to hear from
             you!</p>
         <span>Phone&nbsp;&nbsp;&nbsp;&nbsp;<strong>+1(111)555-1234</strong></span> <br>
-        <span>Email &nbsp;&nbsp;&nbsp;<strong>jdl.lourens@gmail.com</strong></span>
-        <div class="links">
-            <a class="one" href="">Johan Lourens</a>
-            <a class="two" href="">BACK TO TOP</a>
+        <span class="footer-email">Email &nbsp;&nbsp;&nbsp;<strong>jdl.lourens@gmail.com</strong></span>
+        <div class="footer-nav">
+            <h4 class="footer-name">Johan Lourens</h4>
+            <h4 class="footer-totop">BACK TO TOP</h4>
+            <h4 class="footer-home">Home</h4>
+            <h4 class="footer-portfolio">PORTFOLIO</h4>
+            <h4 class="footer-contact">CONTACT</h4>
         </div>
     </footer>
 
