--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header class="header">
-        <h1 class="name">Johan Lourens</h1>
+        <h1 class="name">JOHAN LOURENS</h1>
         <nav>
             <ul class="nav">
                 <li>HOME</li>
@@ -73,14 +73,14 @@
     </main>
     <footer class="footer">
         <h2>CONTACT</h2>
-        <p>If you're interested in chatting or want mroe information about what ive been workingon id love to hear from
+        <p>If you're interested in chatting or want more information about what i've been workingon id love to hear from
             you!</p>
         <span>Phone&nbsp;&nbsp;&nbsp;&nbsp;<strong>+1(111)555-1234</strong></span> <br>
         <span class="footer-email">Email &nbsp;&nbsp;&nbsp;<strong>jdl.lourens@gmail.com</strong></span>
         <div class="footer-nav">
-            <h4 class="footer-name">Johan Lourens</h4>
+            <h4 class="footer-name">JOHAN LOURENS</h4>
             <h4 class="footer-totop">BACK TO TOP</h4>
-            <h4 class="footer-home">Home</h4>
+            <h4 class="footer-home">HOME</h4>
             <h4 class="footer-portfolio">PORTFOLIO</h4>
             <h4 class="footer-contact">CONTACT</h4>
         </div>
