added skills section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Open+Sans&display=swap" rel="stylesheet">
@@ -17,9 +16,9 @@
         <h1 class="name">JOHAN LOURENS</h1>
         <nav>
             <ul class="nav">
-                <li>HOME</li>
-                <li>PORTFOLIO</li>
-                <li>CONTACT</li>
+                <li><a href="#"> HOME</a></li>
+                <li><a href="#portfolio">PORTFOLIO</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -71,6 +70,10 @@
             </div>
         </div>
     </main>
+    <div class="skills">
+        <h2>SKILLS</h2>
+        <img src="/images/additional_image.png" alt="Skills">
+    </div>
     <footer class="footer">
         <h2>CONTACT</h2>
         <p>If you're interested in chatting or want more information about what i've been workingon id love to hear from
