--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
     </main>
     <div class="skills">
         <h2>SKILLS</h2>
-        <img src="/images/additional_image.png" alt="Skills">
+        <figure>
+            <img src="/images/additional_one.png" alt="HTML">
+            <img src="/images/additional_two.png" alt="CSS">
+            <img src="/images/additional_three.png" alt="JAVASCRIPT">
+        </figure>
     </div>
     <footer class="footer">
         <h2>CONTACT</h2>
