--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <h1 class="name">JOHAN LOURENS</h1>
         <nav>
             <ul class="nav">
-                <li><a href="#"> HOME</a></li>
+                <li><a href="#">HOME</a></li>
                 <li><a href="#portfolio">PORTFOLIO</a></li>
+                <li><a href="#skills">SKILLS</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
@@ -31,7 +32,7 @@
     </div>
 
     <main>
-        <h2>PORTFOLIO</h2>
+        <h2 id="portfolio">PORTFOLIO</h2>
         <div class="portfolio">
             <div class="box">
                 <img src="/images/portfolio-1.png" alt="Marketing Page">
@@ -71,7 +72,7 @@
         </div>
     </main>
     <div class="skills">
-        <h2>SKILLS</h2>
+        <h2 id="skills">SKILLS</h2>
         <figure>
             <img src="/images/additional_one.png" alt="HTML">
             <img src="/images/additional_two.png" alt="CSS">
@@ -79,17 +80,17 @@
         </figure>
     </div>
     <footer class="footer">
-        <h2>CONTACT</h2>
+        <h2 id="contact">CONTACT</h2>
         <p>If you're interested in chatting or want more information about what i've been workingon id love to hear from
             you!</p>
         <span>Phone&nbsp;&nbsp;&nbsp;&nbsp;<strong>+1(111)555-1234</strong></span> <br>
         <span class="footer-email">Email &nbsp;&nbsp;&nbsp;<strong>jdl.lourens@gmail.com</strong></span>
         <div class="footer-nav">
             <h4 class="footer-name">JOHAN LOURENS</h4>
-            <h4 class="footer-totop">BACK TO TOP</h4>
-            <h4 class="footer-home">HOME</h4>
-            <h4 class="footer-portfolio">PORTFOLIO</h4>
-            <h4 class="footer-contact">CONTACT</h4>
+            <h4 class="footer-totop"><a href="#">BACK TO TOP</a></h4>
+            <h4 class="footer-home"><a href="#">HOME</a></h4>
+            <h4 class="footer-portfolio"><a href="#portfolio">PORTFOLIO</a></h4>
+            <h4 class="footer-contact"><a href="#contact">CONTACT</a></h4>
         </div>
     </footer>
 
