--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
+    <!-- A Google Font is being used for the text. I decided to use only one google font according to good practice. There is no need to use multiple google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Open+Sans&display=swap" rel="stylesheet">
@@ -14,6 +15,7 @@
 <body>
     <header class="header">
         <h1 class="name">JOHAN LOURENS</h1>
+        <!-- The <nav> tag is being used for the navigation bar. -->
         <nav>
             <ul class="nav">
                 <li><a href="#">HOME</a></li>
@@ -71,7 +73,7 @@
             </div>
         </div>
     </main>
-
+    <!-- Additional section has been added to the page -->
     <div class="skills">
         <h2 id="skills">SKILLS</h2>
         <figure>
