--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="banner">
-        <img class="profile-picture" src="/images/responsive-layout-profile.png" alt="Avatar">
+        <img class="profile-picture" src="images/responsive-layout-profile.png" alt="Avatar">
         <p class="banner-text">Hi! I'm a front-end developer who loves responsive design and css. I recently
             finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!
         </p>
@@ -37,37 +37,37 @@
         <h2 id="portfolio">PORTFOLIO</h2>
         <div class="portfolio">
             <div class="box">
-                <img src="/images/portfolio-1.png" alt="Marketing Page">
+                <img src="images/portfolio-1.png" alt="Marketing Page">
                 <h3>Marketing Page</h3>
                 <p>This project shows the font page of a marketing website meant for a specific business I'm interested
                     in.</p>
             </div>
             <div class="box">
-                <img src="/images/portfolio-2.png" alt="Search Page">
+                <img src="images/portfolio-2.png" alt="Search Page">
                 <h3>Search Page</h3>
                 <p>This project searches through a specific database to find information that the user is trying to look
                     up.</p>
             </div>
             <div class="box">
-                <img src="/images/portfolio-3.png" alt="Travel App">
+                <img src="images/portfolio-3.png" alt="Travel App">
                 <h3>Travel App </h3>
                 <p>This project compares travel times based on different transportation methods and tells you the best
                     one.</p>
             </div>
             <div class="box">
-                <img src="/images/portfolio-4.png" alt="Map of Favorite Sports">
+                <img src="images/portfolio-4.png" alt="Map of Favorite Sports">
                 <h3>Map of Favorite Spots</h3>
                 <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself
                     walking tour.</p>
             </div>
             <div class="box">
-                <img src="/images/portfolio-5.png" alt="Photo Gallery">
+                <img src="images/portfolio-5.png" alt="Photo Gallery">
                 <h3>Photo Gallery</h3>
                 <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate
                     through photos.</p>
             </div>
             <div class="box">
-                <img src="/images/portfolio-6.png" alt="Calculator">
+                <img src="images/portfolio-6.png" alt="Calculator">
                 <h3>Calculator</h3>
                 <p>Someone can enter in the numbers they want and press the big blue button and get the result.</p>
             </div>
@@ -77,9 +77,9 @@
     <div class="skills">
         <h2 id="skills">SKILLS</h2>
         <figure>
-            <img src="/images/additional_one.png" alt="HTML">
-            <img src="/images/additional_two.png" alt="CSS">
-            <img src="/images/additional_three.png" alt="JAVASCRIPT">
+            <img src="images/additional_one.png" alt="HTML">
+            <img src="images/additional_two.png" alt="CSS">
+            <img src="images/additional_three.png" alt="JAVASCRIPT">
         </figure>
     </div>
 
@@ -94,6 +94,7 @@
             <h4 class="footer-totop"><a href="#">BACK TO TOP</a></h4>
             <h4 class="footer-home"><a href="#">HOME</a></h4>
             <h4 class="footer-portfolio"><a href="#portfolio">PORTFOLIO</a></h4>
+            <h4 class="footer-skills"><a href="#portfolio">SKILLS</a></h4>
             <h4 class="footer-contact"><a href="#contact">CONTACT</a></h4>
         </div>
     </footer>
